migrate less to sass, closes #1488
Closes #1488

Merge request studip/studip!927

--- a/resources/assets/stylesheets/less/schedule.less
+++ b/resources/assets/stylesheets/less/schedule.less
@@ -1,6 +1,6 @@
 /* --- ablaufplan / dates --------------------------------------------------- */
 .dates_items th, .dates_items td {
-    border-bottom: 3px solid #fff;
+    border-bottom: 3px solid @white;
 }
 
 .dates_opened td {
