--- a/resources/assets/stylesheets/scss/lists.scss
+++ b/resources/assets/stylesheets/scss/lists.scss
@@ -1,41 +1,18 @@
-// Lists
-// -------------------------
-
 // Unordered and Ordered lists
 ul,
 ol {
     margin-top: 0;
     margin-bottom: 0;
+
     ul,
     ol {
         margin-bottom: 0;
     }
 }
 
-
-// List options
-
-// Unstyled keeps list items block level, just removes default browser padding and list-style
-.list-unstyled {
-    padding-left: 0;
-    list-style: none;
-}
-
-// Inline turns list items into inline-block
-.list-inline {
-    .list-unstyled();
-    margin-left: -5px;
-
-    > li {
-        display: inline-block;
-        padding-left: 5px;
-        padding-right: 5px;
-    }
-}
-
 //comma separated
 .list-csv {
-    .list-inline();
+    @include list-inline();
     margin-left: 0;
 
     > li {
@@ -44,6 +21,7 @@ ol {
         &::after {
             content: ",";
         }
+
         &:last-child::after {
             content: "";
         }
@@ -55,12 +33,14 @@ ol {
         }
     }
 }
+
 .list-pipe-separated {
-    .list-inline();
+    @include list-inline();
     display: flex; // Prevents the mystery gap between elements
 
     > li {
-        border-right: 1px solid @dark-gray-color;
+        border-right: 1px solid $dark-gray-color;
+
         &:last-child {
             border-right: 0;
         }
@@ -94,6 +74,7 @@ ul.default {
     li:only-child {
         list-style: none;
     }
+
     li:not(:last-child) {
         margin-bottom: 0.25em;
     }
@@ -103,10 +84,12 @@ dl.default {
     display: grid;
     grid-column-gap: 1ex;
     grid-template-columns: max-content auto;
+
     dt {
         font-weight: normal;
         grid-column-start: 1;
     }
+
     dd {
         grid-column-start: 2;
     }
