--- a/resources/assets/stylesheets/studip.scss
+++ b/resources/assets/stylesheets/studip.scss
@@ -12,40 +12,51 @@
 @import "scss/admin";
 @import "scss/admin-courses";
 @import "scss/admission";
+@import "scss/article";
+@import "scss/ajax";
 @import "scss/avatar";
 @import "scss/blubber";
+@import "scss/buttons";
 @import "scss/contentbar";
 @import "scss/contents";
 @import "scss/courseware";
+@import "scss/css_tree";
 @import "scss/dates";
+@import "scss/dashboard";
 @import "scss/files";
 @import "scss/forum";
+@import "scss/grid";
+@import "scss/i18n";
 @import "scss/fullscreen";
-@import "scss/progress_indicator.scss";
 @import "scss/links";
+@import "scss/lists";
+@import "scss/messages";
 @import "scss/my_courses";
 @import "scss/mvv";
 @import "scss/oer";
 @import "scss/qrcode";
+@import "scss/questionnaire";
+@import "scss/quicksearch";
 @import "scss/oauth2";
 @import "scss/pagination";
+@import "scss/plus";
+@import "scss/progress_indicator.scss";
 @import "scss/profile";
 @import "scss/raumzeit";
 @import "scss/report";
 @import "scss/resources";
 @import "scss/sidebar";
-@import "scss/tooltip";
-@import "scss/table_of_contents";
-@import "scss/wiki";
 @import "scss/select";
 @import "scss/skiplinks";
 @import "scss/start";
 @import "scss/scroll-to-top";
 @import "scss/studygroup";
+@import "scss/table_of_contents";
+@import "scss/tooltip";
 @import "scss/tfa";
 @import "scss/tour";
+@import "scss/wiki";
 
-@import "scss/grid";
 
 // Class for DOM elements that should only be visible to Screen readers
 .sr-only {
