--- a/resources/assets/stylesheets/studip.scss
+++ b/resources/assets/stylesheets/studip.scss
@@ -15,18 +15,23 @@
 @import "scss/article";
 @import "scss/ajax";
 @import "scss/avatar";
+@import "scss/badges";
 @import "scss/blubber";
 @import "scss/buttons";
 @import "scss/contentbar";
 @import "scss/contents";
+@import "scss/comments";
 @import "scss/courseware";
 @import "scss/css_tree";
 @import "scss/dates";
 @import "scss/dashboard";
+@import "scss/enrolment";
 @import "scss/files";
+@import "scss/feedback";
 @import "scss/forum";
 @import "scss/grid";
 @import "scss/i18n";
+@import "scss/index";
 @import "scss/fullscreen";
 @import "scss/links";
 @import "scss/lists";
@@ -34,6 +39,7 @@
 @import "scss/my_courses";
 @import "scss/mvv";
 @import "scss/oer";
+@import "scss/overlapping";
 @import "scss/qrcode";
 @import "scss/questionnaire";
 @import "scss/quicksearch";
@@ -47,6 +53,7 @@
 @import "scss/resources";
 @import "scss/sidebar";
 @import "scss/select";
+@import "scss/search";
 @import "scss/skiplinks";
 @import "scss/start";
 @import "scss/scroll-to-top";
