--- a/resources/assets/stylesheets/scss/comments.scss
+++ b/resources/assets/stylesheets/scss/comments.scss
@@ -1,9 +1,9 @@
 section.comments {
     text-align: left;
-    border-color: @content-color-40;
+    border-color: $content-color-40;
     border-top-style: none;
     border-width: 1px;
-    background-color: white;
+    background-color: $white;
     padding: 5px;
 
     h1 {
@@ -14,19 +14,18 @@ section.comments {
     }
     article.comment {
         border: 0;
-        border-top: 1px solid @light-gray-color-40;
+        border-top: 1px solid $light-gray-color-40;
         max-width: 1260px;
-        margin: auto;
         margin-bottom: 4px;
 
         h1 {
-            margin-bottom: 0px;
+            margin-bottom: 0;
         }
 
         time {
             float: right;
             font-size: 0.8em;
-            color: @light-gray-color-40;
+            color: $light-gray-color-40;
         }
     }
 }
