--- a/resources/assets/stylesheets/scss/enrolment.scss
+++ b/resources/assets/stylesheets/scss/enrolment.scss
@@ -1,17 +1,16 @@
 #enrollment {
     ul {
-        border-top: 1px solid @base-color;
+        border-top: 1px solid $base-color;
         list-style: none inside;
-        margin: 0px;
+        margin: 0;
         overflow-x: auto;
-        padding: 0px;
+        padding: 0;
 
-        .media-breakpoint-medium-up({
+        @include media-breakpoint-medium-up() {
             max-height: 200px;
-        });
-
+        }
         li {
-            border-bottom: 1px solid @base-color;
+            border-bottom: 1px solid $base-color;
             padding: 5px;
 
             &.ui-draggable.ui-draggable-handle {
@@ -43,14 +42,14 @@
     #available-courses li.visible,
     #selected-courses li {
         &:hover {
-            background-color: @base-color-20;
+            background-color: $base-color-20;
         }
     }
 
     #available-courses li.ui-draggable.ui-draggable-dragging,
     #selected-courses li.ui-sortable-helper {
-        background-color: @base-color-20;
-        border: 1px solid @base-color;
+        background-color: $base-color-20;
+        border: 1px solid $base-color;
         list-style: none inside;
         padding: 5px;
         width: auto;
@@ -69,12 +68,12 @@
         }
 
         &.ui-sortable-placeholder {
-            background-color: @yellow-20;
+            background-color: $yellow-20;
         }
     }
 
     .ui-sortable-helper .delete {
-        display:none;
+        display: none;
     }
 
     input[name="filter"] {
@@ -82,7 +81,7 @@
     }
 
     .ui-state-highlight {
-        background: @red;
+        background: $red;
         border: 0;
         height: 30px;
         padding: 10px;
@@ -99,17 +98,13 @@
         .selected {
             flex: 1;
         }
+
         .available {
             margin-right: 0.5em;
         }
+
         .selected {
             margin-left: 0.5em;
         }
-        //
-        // .available #available-courses,
-        // .selected #selected-courses {
-        //     position: sticky;
-        //     top: 0;
-        // }
     }
 }
