--- a/resources/assets/stylesheets/scss/feedback.scss
+++ b/resources/assets/stylesheets/scss/feedback.scss
@@ -44,9 +44,8 @@ article.studip.feedback-stream {
     .feedback-entry {
         margin-top: 10px;
         padding: 5px;
-        background-color: @content-color-10;
-        border: 1px solid @content-color-40;
-        border-width: 1px 0;
+        background-color: $content-color-10;
+        border: 1px solid $content-color-40;
 
         header {
             background: transparent;
@@ -71,7 +70,7 @@ article.studip.feedback-stream {
             }
         }
         .date {
-            color: #999;
+            color: $base-gray;
             text-align: right;
             font-size: 12px;
         }
@@ -99,7 +98,7 @@ table.feedback {
 .percentage-bar {
     margin-left: -5px;
     padding: 0 5px;
-    color: @content-color-10;
-    background-color: @base-color;
+    color: $content-color-10;
+    background-color: $base-color;
     min-width: 20px;
 }
