--- a/resources/assets/stylesheets/scss/index.scss
+++ b/resources/assets/stylesheets/scss/index.scss
@@ -1,9 +1,9 @@
 div.index_container {
     margin: 0 0;
     top: 111px;
-    bottom: 0px;
+    bottom: 0;
     width: 100%;
-    height: ~"calc(100% - 110px)";
+    height: calc(100% - 110px);
 
     ul#tabs {
         display: none;
@@ -31,7 +31,7 @@ div.index_container {
 
     div.index_main {
         background-color: rgba(255, 255, 255, 0.8);
-        box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.5);
+        box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
         margin-left: 50px;
         margin-top: 50px;
         width: 500px;
@@ -42,7 +42,6 @@ div.index_container {
 
         form {
             padding: 20px;
-            padding-bottom: 0;
         }
 
         footer {
@@ -50,7 +49,7 @@ div.index_container {
             padding: 20px;
 
             div#languages {
-                border-top: 1px solid @light-gray-color;
+                border-top: 1px solid $light-gray-color;
                 font-size: 0.9em;
                 padding: 10px;
 
@@ -63,23 +62,23 @@ div.index_container {
                 display: flex;
                 align-items: center;
                 gap: 5px;
-                border-top: 1px solid @light-gray-color;
+                border-top: 1px solid $light-gray-color;
                 font-size: 0.9em;
                 padding: 10px;
 
                 a {
                     text-decoration: underline;
-                    color: @contrast-blue;
+                    color: $base-color;
 
                     &:hover, &:focus {
                         font-size: 1em;
-                        color: @red;
+                        color: $red;
                     }
                 }
             }
 
             div.login_info {
-                border-top: 1px solid @light-gray-color;
+                border-top: 1px solid $light-gray-color;
                 font-size: 0.8em;
                 div {
                     text-align: right;
@@ -97,7 +96,7 @@ div.index_container {
         }
         nav {
             h1 {
-                border-bottom: 0px;
+                border-bottom: 0;
             }
             padding: 10px;
             margin-left: 20px;
@@ -113,7 +112,7 @@ div.index_container {
                     font-size: 1.5em;
                     p {
                         font-size: 0.5em;
-                        color: @black;
+                        color: $black;
                     }
                 }
             }
@@ -126,21 +125,5 @@ div.index_container {
 #login {
     .messagebox {
         margin-bottom: -25px;
-    }
-}
-
-@-moz-document url-prefix() {
-    div.index_container {
-        height: calc(100% - 145px);
-    }
-
-    #index,
-    #login {
-        height: calc(100% - 34px);
-
-        #layout_footer {
-            position: inherit;
-            top: 0;
-        }
     }
 }
