--- a/resources/assets/stylesheets/scss/search.scss
+++ b/resources/assets/stylesheets/scss/search.scss
@@ -1,27 +1,28 @@
+$icon-size: 32px;
 label.inactive-settings-category {
-        color:red;
+    color: $red;
 }
 
 #search {
     // "Searching..." info
     #searching-gif {
-        @icon-size: 32px;
-
-        color: @dark-gray-color-45;
+        color: $dark-gray-color-45;
         display: none;
         text-align: center;
 
-        background-image: url("@{image-path}/ajax-indicator-black.svg");
+        background-image: url("#{$image-path}/ajax-indicator-black.svg");
         background-position: center bottom;
         background-repeat: no-repeat;
-        background-size: @icon-size;
+        background-size: $icon-size;
         margin-bottom: 10px;
-        padding-bottom: (@icon-size + 5px);
+        padding-bottom: ($icon-size + 5px);
     }
+
     &.is-searching {
         #searching-gif {
             display: block;
         }
+
         #search-results {
             display: none;
         }
@@ -41,13 +42,13 @@ label.inactive-settings-category {
         }
 
         article {
-            border: 1px solid @content-color-40;
+            border: 1px solid $content-color-40;
             margin-bottom: 8px;
             margin-top: 8px;
 
             > header {
-                background-color: @content-color-20;
-                color: @base-color;
+                background-color: $content-color-20;
+                color: $base-color;
 
                 display: flex;
                 flex-direction: row;
@@ -61,9 +62,9 @@ label.inactive-settings-category {
                 }
 
                 div.search-more-results {
-                    font-size: @font-size-base;
+                    font-size: $font-size-base;
                     font-weight: normal;
-                    line-height: @font-size-h3;
+                    line-height: $font-size-h3;
                     margin-bottom: auto;
                     margin-top: auto;
                     margin-right: 5px;
@@ -77,18 +78,18 @@ label.inactive-settings-category {
                 flex-wrap: nowrap;
 
                 padding: 8px;
-                transition: background-color @transition-duration;
+                transition: background-color $transition-duration;
 
                 &.search-is-subcourse {
                     padding-left: 30px;
                 }
 
                 &:not(:first-child) {
-                    border-top: 1px solid @content-color-40;
+                    border-top: 1px solid $content-color-40;
                 }
 
                 &:hover {
-                    background-color: fadeout(@light-gray-color, 80%);
+                    background-color: mix($light-gray-color, $white, 80%);
                 }
 
                 &.search-extended-result {
@@ -109,7 +110,7 @@ label.inactive-settings-category {
                     margin-right: 8px;
 
                     img {
-                        .square(36px);
+                        @include square(36px);
                         vertical-align: middle;
                     }
                 }
@@ -125,13 +126,13 @@ label.inactive-settings-category {
                     }
 
                     .search-result-title {
-                        font-size: @font-size-base;
+                        font-size: $font-size-base;
                         font-weight: bold;
                     }
 
                     .search-result-details {
-                        color: @dark-gray-color-80;
-                        font-size: @font-size-small;
+                        color: $dark-gray-color-80;
+                        font-size: $font-size-small;
                     }
                 }
 
@@ -144,16 +145,16 @@ label.inactive-settings-category {
 
 
                     .search-result-time {
-                        color: @dark-gray-color-80;
+                        color: $dark-gray-color-80;
                         flex: 1;
-                        font-size: @font-size-small;
+                        font-size: $font-size-small;
                         text-align: right;
                         white-space: nowrap;
                     }
 
                     .search-result-additional {
-                        color: @dark-gray-color-80;
-                        font-size: @font-size-small;
+                        color: $dark-gray-color-80;
+                        font-size: $font-size-small;
                         text-align: right;
                     }
 
@@ -168,8 +169,8 @@ label.inactive-settings-category {
                     margin: 20px 0 0 -32px;
 
                     a {
-                        .background-icon('arr_1right', 'clickable', 24);
-                        .square(24px);
+                        @include background-icon(arr_1right, clickable, 24);
+                        @include square(24px);
                         display: inline-block;
                     }
                 }
@@ -179,10 +180,11 @@ label.inactive-settings-category {
 }
 
 a.no-result {
-    color: grey;
+    color: $base-gray;
     pointer-events: none;
     cursor: default;
 }
+
 div#div-search-input {
     margin-top: 0;
     margin-bottom: 16px;
@@ -201,29 +203,32 @@ div#div-search-input {
     flex-direction: row;
     align-items: baseline;
     margin: 10px 0;
+
     h5 {
         margin-right: 10px;
     }
+
     .filter-items {
         .button {
-            background-color: @content-color-20;
-            color: @brand-color-dark;
-            min-width:auto;
+            background-color: $content-color-20;
+            color: $brand-color-dark;
+            min-width: auto;
             border: 0;
             white-space: nowrap;
             padding: 8px;
             margin: 0 5px;
+
             &::before {
                 background-repeat: no-repeat;
                 content: " ";
                 float: right;
                 height: 16px;
                 width: 16px;
-                .background-icon('trash', 'clickable');
+                @include background-icon(trash, clickable);
             }
 
             &:hover::before {
-                .background-icon('trash', 'attention');
+                @include background-icon(trash, clickable);
             }
         }
     }
