--- a/resources/assets/stylesheets/scss/consultation.scss
+++ b/resources/assets/stylesheets/scss/consultation.scss
@@ -1,6 +1,6 @@
 .consultation-note {
-    border-bottom: 1px solid @light-gray-color-40;
-    font-size: @font-size-small;
+    border-bottom: 1px solid $light-gray-color-40;
+    font-size: $font-size-small;
     margin-bottom: 2px;
     padding-bottom: 2px;
 
@@ -9,13 +9,13 @@
         margin-bottom: 0;
         padding-bottom: 0;
 
-        border-top: 1px solid @light-gray-color-40;
+        border-top: 1px solid $light-gray-color-40;
         margin-top: 2px;
         padding-top: 2px;
     }
 
     &.shortened {
-        .icon('before', 'info-circle', 'info', 12, 5px);
+        @include icon(before, info-circle, info, 12px, 5px);
         transition: opacity 300ms;
         &:not(:hover)::after {
             opacity: 0.5;
@@ -23,10 +23,10 @@
     }
 }
 .consultation-free {
-    color: @green;
+    color: $green;
 }
 .consultation-occupied {
-    color: @red;
+    color: $red;
 }
 
 .consultation-overview {
@@ -34,6 +34,6 @@
         font-style: italic;
     }
     .slot-is-expired td {
-        background-color: @dark-gray-color-10;
+        background-color: $dark-gray-color-10;
     }
 }
