--- a/resources/assets/stylesheets/scss/studip-selection.scss
+++ b/resources/assets/stylesheets/scss/studip-selection.scss
@@ -6,6 +6,7 @@
     > * {
         flex: 1 0 100%;
     }
+
     > legend {
         margin-bottom: 0 !important;
     }
@@ -16,31 +17,34 @@
         margin: 0;
         padding: 0;
     }
+
     li {
         display: inline-block;
         vertical-align: top;
     }
 
     li:not(.empty-placeholder) {
-        color: @base-color;
+        color: $base-color;
         cursor: pointer;
         margin: 1px 0;
         padding-right: 0.5em;
     }
 
     li.empty-placeholder {
-        color: fadeout(@text-color, 30%);
+        color: mix($text-color, $white, 30%);
+
         &:not(:only-child) {
             display: none;
         }
     }
 
     .studip-selection-selectable li.empty-placeholder {
-        color: @text-color;
+        color: $text-color;
         padding-left: 20px;
         position: relative;
 
-        .icon('before', 'info-circle', 'info');
+        @include icon(before, info-circle, info);
+
         &::before {
             position: absolute;
             left: 0;
@@ -54,10 +58,11 @@
     }
 
     .studip-selection-selected .studip-selection-label {
-        .icon('before', 'radiobutton-checked', 'clickable');
+        @include icon(before, radiobutton-checked, clickable);
     }
+
     .studip-selection-selectable .studip-selection-label {
-        .icon('before', 'radiobutton-unchecked', 'clickable');
+        @include icon(before, radiobutton-unchecked, clickable);
     }
 
     .studip-selection-image + .studip-selection-label {
@@ -69,13 +74,14 @@
     .studip-selection-selected li:hover {
         .studip-selection-image,
         .studip-selection-label::before {
-            .background-icon('remove-circle-full', 'clickable');
+            @include background-icon(remove-circle-full, clickable);
         }
     }
+
     .studip-selection-selectable li:hover {
         .studip-selection-image,
         .studip-selection-label::before {
-            .background-icon('add-circle-full', 'clickable');
+            @include background-icon(add-circle-full, clickable);
         }
     }
 
@@ -93,12 +99,14 @@
                 background-position: center;
                 background-repeat: no-repeat;
                 background-size: contain;
+
                 img {
                     opacity: 0;
                 }
             }
+
             .studip-selection-label {
-                color: @active-color;
+                color: $active-color;
             }
         }
     }
