--- a/resources/assets/stylesheets/mixins/misc.scss
+++ b/resources/assets/stylesheets/mixins/misc.scss
@@ -28,3 +28,8 @@
 @mixin square($size) {
     @include size($size, $size);
 }
+
+// https://codepen.io/kennyglenn/pen/kxqWjP
+@function contrast($color, $dark, $light, $threshold: 50%) {
+    @return if(lightness($color) > $threshold, $light, $dark)
+}
