--- a/resources/assets/stylesheets/scss/activityfeed.scss
+++ b/resources/assets/stylesheets/scss/activityfeed.scss
@@ -5,14 +5,14 @@
     overflow-y: auto;
 
     .activity {
-        border: 1px solid #d0d7e3;
+        border: 1px solid $content-color-40;
         width: 95%;
         margin: 30px auto;
 
     }
 
     .activity header {
-        color: #28497c;
+        color: $base-color;
         padding: 5px;
         display: flex;
         position: relative;
@@ -22,10 +22,10 @@
             border-radius: 50%;
             width: 42px;
             height: 42px;
-            background: @base-color;
+            background: $base-color;
             position: absolute;
             top: -20px;
-            border: 3px solid white;
+            border: 3px solid $white;
             cursor: pointer;
 
             &.left {
@@ -38,7 +38,7 @@
 
             img {
                 padding: 12px;
-                .square(18px);
+                @include square(18px);
             }
         }
 
@@ -51,7 +51,7 @@
             }
             h3 {
                 display: inline;
-                color: #28497c;
+                color: $base-color;
                 border-bottom: none;
                 font-size: 14px;
                 vertical-align: 6px;
@@ -62,7 +62,7 @@
             max-width: 25px;
         }
         .activity-date{
-            color: gray;
+            color: $base-gray;
             font-size: 0.75em ;
             margin: 0 0 0 30px;
             display: block;
@@ -73,7 +73,7 @@
 
     .activity-content{
         padding: 5px;
-        background-color: white;
+        background-color: $white;
         margin-left: 30px;
         display: none;
     }
@@ -106,7 +106,7 @@
 
 
     .activity-object-link ul {
-        padding: 0px;
+        padding: 0;
     }
 
     .activity-object-link ul li {
@@ -117,7 +117,7 @@
 
 
     .activity-day {
-        color: gray;
+        color: $base-gray;
         font-size: 0.75em ;
         margin: 0 45%;
     }
@@ -129,7 +129,7 @@
     }
 
     .loading-indicator span {
-        background-color: #CCCCDD;
+        background-color: $light-gray-color;
         border-radius: 50%;
         height: 10px;
         position: relative;
@@ -172,24 +172,11 @@
   100% { transform: scale(1); }
 }
 
-// Mixin that replaces the navigation icon tags with css images
-.navigation-icon(@default-icon-name, @toggled-icon-name) {
-    img { display: none; }
 
-    display: inline-block;
-
-    .background-icon(@default-icon-name, 'clickable');
-    .hide-text();
-    .square(16px);
-
-    &.toggled {
-        .background-icon(@toggled-icon-name, 'clickable');
-    }
-}
 
 #toggle-all-activities {
-    .navigation-icon('no-activity', 'activity');
+    @include navigation-icon(no-activity, activity);
 }
 #toggle-user-activities {
-    .navigation-icon('visibility-invisible/headache', 'visibility-visible/headache');
+    @include navigation-icon(visibility-invisible/headache, visibility-visible/headache);
 }
