--- a/resources/assets/stylesheets/scss/content.scss
+++ b/resources/assets/stylesheets/scss/content.scss
@@ -2,7 +2,7 @@
     background-color: #e3eaf6;
     background-image: linear-gradient(#cdd9ed, #e3eaf6 40%, #e3eaf6);
     background-repeat: no-repeat;
-    border-top: 1px solid @content-color;
+    border-top: 1px solid $content-color;
     line-height: 17pt;
     height: 25px;
 }
