--- a/resources/assets/stylesheets/scss/dialog.scss
+++ b/resources/assets/stylesheets/scss/dialog.scss
@@ -1,5 +1,5 @@
 .ui-widget-overlay {
-    background: fadeout(mix(@base-gray, #fff, 85%), 21%);
+    background: transparentize($base-gray, .2);
     opacity: 1;
     position: fixed;
 }
@@ -7,22 +7,22 @@
 .ui-dialog.ui-widget.ui-widget-content {
     border: 0;
     padding: 3px;
-    box-shadow: 0px 0px 8px rgba(0,0,0,0.5);
+    box-shadow: 0 0 8px rgba(0,0,0,0.5);
 
     .hide-in-dialog {
         display: none;
     }
 
     .ui-dialog-titlebar {
-        background: @brand-color-darker;
+        background: $brand-color-darker;
         border: 0;
-        color: @contrast-content-white;
+        color: $contrast-content-white;
         font-size:1.3em;
         font-weight: normal;
     }
 
     .ui-dialog-titlebar-close {
-        .square(32px);
+        @include square(32px);
         background: inherit;
         border: 0;
         line-height:32px;
@@ -31,15 +31,15 @@
         text-align:center;
 
         &:hover {
-            .square(32px);
+            @include square(32px);
             background: inherit;
             border: 0;
             margin-top:-16px;
             padding: 0;
         }
         .ui-icon {
-            .square(16px);
-            .background-icon('decline', 'info_alt');
+            @include square(16px);
+            @include background-icon(decline, info_alt);
             background-position: 0;
             display:inline-block;
             margin: 0;
@@ -49,7 +49,7 @@
             transform: translate(-50%, -50%);
 
             &:hover{
-              .background-icon('decline', 'info_alt');
+              @include background-icon(decline, info_alt);
             }
         }
     }
@@ -60,7 +60,7 @@
     .ui-dialog-buttonpane {
         padding: 0.5em 0.4em;
         margin: 0 1em;
-        border-color: @base-color-20;
+        border-color: $base-color-20;
 
         .ui-dialog-buttonset {
             text-align: center;
@@ -68,7 +68,7 @@
             white-space: nowrap;
         }
         .ui-button {
-            .button(); // Include button mixin
+            @include button(); // Include button mixin
             font-weight: normal;
 
             &.accept,
@@ -80,25 +80,25 @@
             }
 
             &.accept {
-              .button-with-icon("accept", "clickable", "info_alt");
+              @include button-with-icon(accept, clickable, info_alt);
             }
 
             &.cancel {
-              .button-with-icon("decline", "clickable", "info_alt");
+              @include button-with-icon(decline, clickable, info_alt);
             }
 
             &.download {
-              .button-with-icon("download2", "clickable", "info_alt");
+              @include button-with-icon(download2, clickable, info_alt);
             }
 
             &.disabled,
             &[disabled] {
-                background: @light-gray-color-20;
+                background: $light-gray-color-20;
                 cursor: default;
                 opacity: 0.65;
 
                 &:hover {
-                    color: @base-color;
+                    color: $base-color;
                 }
             }
 
@@ -115,12 +115,12 @@
     }
 }
 .ui-dialog-titlebar-wiki {
-    .background-icon('question-circle', 'info_alt', 24);
+    @include background-icon(question-circle, info_alt, 24);
     background-position: center;
     background-repeat: no-repeat;
     display: inline-block;
     position: absolute;
-    .square(32px);
+    @include square(32px);
     margin-top: -16px;
     top: 50%;
     right: 34px; // This is ugly but hard to avoid since the close button's position on a dialog is also hardcoded
@@ -144,8 +144,8 @@
     min-width: 30em;
 
     .ui-dialog-titlebar {
-        background-color: @yellow;
-        color: black;
+        background-color: $yellow;
+        color: $contrast-content-white;
         text-align: left;
     }
     .ui-dialog-titlebar-close {
@@ -153,14 +153,14 @@
         border: 0;
 
         .ui-icon, .ui-icon:hover {
-            .background-icon('decline', 'clickable');
+            @include background-icon(decline, clickable);
             background-position: 0;
         }
     }
 
     .ui-dialog-content {
         box-sizing: border-box;
-        .background-icon('question-circle-full', 'status-yellow');
+        @include background-icon(question-circle-full, status-yellow);
         background-position: 12px 8px;
         background-repeat: no-repeat;
         background-size: 32px;
@@ -181,9 +181,9 @@
 }
 
 .ui-dialog.studip-lightbox {
-    @arrow-distance: 8px;
-    @arrow-size: 32px;
-    @arrow-zoom: 16px;
+    $arrow-distance: 8px;
+    $arrow-size: 32px;
+    $arrow-zoom: 16px;
     .wrapper {
         position: absolute;
         top: 0;
@@ -217,24 +217,24 @@
             left: 0;
             right: 50%;
 
-            .icon('before', 'arr_1left', 'clickable', @arrow-size);
+            @include icon(before, arr_1left, clickable, $arrow-size);
             &::before {
                 position: absolute;
-                left: @arrow-distance;
+                left: $arrow-distance;
                 top: 50%;
                 transform: translate(0, -50%);
                 z-index: 2;
             }
 
             &::after {
-                .square((@arrow-size + @arrow-zoom));
+                @include square(($arrow-size + $arrow-zoom));
 
                 position: absolute;
                 left: 0;
                 top: 50%;
                 transform: translate(0, -50%);
 
-                background-color: @white;
+                background-color: $white;
                 content: '';
                 display: block;
 
@@ -245,24 +245,24 @@
             right: 0;
             left: 50%;
 
-            .icon('before', 'arr_1right', 'clickable', @arrow-size);
+            @include icon(before, arr_1right, clickable, $arrow-size);
             &::before {
                 position: absolute;
-                right: @arrow-distance;
+                right: $arrow-distance;
                 top: 50%;
                 transform: translate(0, -50%);
                 z-index: 2;
             }
 
             &::after {
-                .square((@arrow-size + @arrow-zoom));
+                @include square(($arrow-size + $arrow-zoom));
 
                 position: absolute;
                 right: 0;
                 top: 50%;
                 transform: translate(0, -50%);
 
-                background-color: @white;
+                background-color: $white;
                 content: '';
                 display: block;
 
@@ -282,16 +282,16 @@
         white-space:normal;
 
         html.responsive-display & {
-            @gap: 10px;
+            $gap: 10px;
 
             display: flex;
             flex-wrap: wrap;
-            justify-content: space-space-between;
-            margin: -@gap 0 0 -@gap;
+            justify-content: space-between;
+            margin: -$gap 0 0 -$gap;
 
             .ui-button {
                 flex: 1;
-                margin: @gap 0 0 @gap;
+                margin: $gap 0 0 $gap;
                 overflow-x: hidden;
                 text-overflow: ellipsis;
             }
