--- a/resources/assets/stylesheets/scss/studip-overlay.scss
+++ b/resources/assets/stylesheets/scss/studip-overlay.scss
@@ -1,5 +1,13 @@
+@mixin center()
+{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
 .modal-overlay {
-    .ui-widget-overlay;
+    @extend .ui-widget-overlay;
 
     position: fixed;
     left: 0;
@@ -8,46 +16,42 @@
     bottom: 0;
 
     &-local {
-        background-color: fadeout(@light-gray-color, 50%);
+        background-color: mix($light-gray-color, $white, 50%);
         position: absolute;
     }
+
     &-ajax {
         // Fallback to gif for browsers that don't support svg. Fortunately,
         // the support for multiple background images and svg covers the same
         // browsers (except for some old android versions that we can neglect).
         // Thus said, if the loading animation looks ugly - update your
         // browser ffs!
-        background-image: url("@{image-path}/ajax_indicator_small.gif");
-        background-image: none, url("@{image-path}/ajax-indicator-white.svg");
+        background-image: url("#{$image-path}/ajax_indicator_small.gif");
+        background-image: none, url("#{$image-path}/ajax-indicator-white.svg");
         background-position: center;
         background-repeat: no-repeat;
     }
+
     &-ajax.modal-overlay-dark {
-        background-image: none, url("@{image-path}/ajax-indicator-black.svg");
+        background-image: none, url("#{$image-path}/ajax-indicator-black.svg");
     }
 
     // Progress
     &.ui-front {
-        .center() {
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
-        }
-
         cursor: wait;
 
         h1 {
-            .center();
+            @include center();
 
             margin-bottom: 0;
             padding-bottom: 100px;
 
-            color: #fff;
+            color: $white;
             border-bottom: 0;
         }
+
         progress {
-            .center();
+            @include center();
 
             margin-top: 45px;
             width: 80%;
@@ -59,15 +63,16 @@
 
             border: none;
             border-radius: 2px;
-            box-shadow: 0 0 3px @light-gray-color-20;
+            box-shadow: 0 0 3px $light-gray-color-20;
 
-            background-color: @light-gray-color;
+            background-color: $light-gray-color;
 
             &::-moz-progress-bar, &::-webkit-progress-value {
-                background-color: @yellow-40;
+                background-color: $yellow-40;
                 transition: all 300ms;
             }
         }
+
         ul.overlay-progress-log {
             position: absolute;
             top: 50%;
@@ -78,10 +83,9 @@
             margin: 60px 0 0;
             padding: 0;
             text-align: center;
-            color: white;
+            color: $white;
             max-height: 120px;
             overflow: hidden;
         }
     }
-
 }
