--- a/resources/assets/stylesheets/highcontrast.scss
+++ b/resources/assets/stylesheets/highcontrast.scss
@@ -348,7 +348,7 @@ form.default fieldset > legend {
 
 section.contentbox header h1,
 section.contentbox header h1 a,
-section.contentbox section span:not(.minor),
+section.contentbox header,
 article.studip > header,
 article.studip > header h1,
 article.studip > header h1 > a,
